<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@color/colorCustomer" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/Img_des"
                    android:src="@drawable/personal" />

                <ImageButton
                    android:id="@+id/btnSelectPhoto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignEnd="@+id/imgProfile"
                    android:layout_alignBottom="@+id/imgProfile"
                    android:background="@drawable/btn_circle_rider"
                    android:src="@drawable/ic_camera" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/edtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="Enter your full name"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorCustomer"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/etMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:maxLength="26"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorCustomer"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="Enter your password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorCustomer"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="Enter your phone number"
                    android:inputType="phone"
                    android:maxLength="16"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorCustomer"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="Enter your delivery address"
                    android:inputType="text"
                    android:maxLength="40"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorCustomer"
                    android:textSize="@dimen/font_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/Description"
                    android:inputType="textMultiLine"
                    android:maxLength="70"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorCustomer"
                    android:textSize="@dimen/font_size" />
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="end"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_circle_rider"
                android:src="@drawable/ic_home"
                />
            <ImageButton
                android:id="@+id/btnConfirm"
                android:layout_width="50dp"
                android:layout_marginEnd="40dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_circle_rider"
                android:src="@drawable/ic_save"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>






